Tests/Resources/Ok/ambiguous_type_as_bottom_list.st
language core;

extend with #structural-subtyping, #ambiguous-type-as-bottom, #lists, #top-type;

fn main(n : Nat) -> Top {
  return List::head([])
}
